enable OMAP_SMARTREFLEX_CLASS1P5

--- a/arch/arm/configs/river_defconfig
+++ b/arch/arm/configs/river_defconfig
@@ -174,7 +174,6 @@ CONFIG_IOSCHED_CFQ=y
 # CONFIG_IOSCHED_BFQ is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
-# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -281,7 +280,8 @@ CONFIG_ARCH_OMAP2PLUS=y
 #
 CONFIG_OMAP_SMARTREFLEX=y
 # CONFIG_OMAP_SMARTREFLEX_CLASS3 is not set
-# CONFIG_OMAP_SMARTREFLEX_CLASS1P5 is not set
+CONFIG_OMAP_SMARTREFLEX_CLASS1P5=y
+CONFIG_OMAP_SR_CLASS1P5_RECALIBRATION_DELAY=86400000
 CONFIG_OMAP_RESET_CLOCKS=y
 # CONFIG_OMAP_MUX is not set
 CONFIG_OMAP_MCBSP=y
